packages/parser/test/parser/E0106-function-declaration.txt
fn test (a: int b: str) {}
===== err =====
anonymous:1:16: ParseError: E0106 - Expected comma after function declaration parameter
1 | fn test (a: int b: str) {}
  |                ^
